--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <!-- Use any element to open/show the overlay navigation menu -->
   <span style="cursor:pointer" id="sidemenue" onclick="openNav()"class="sbutton"><img src="smenue.png"alt=""></span>
   <div class="logo"><h1>LYKE WISE</h1></div>
+  <div class="signin" style="font-size: 10px" ><a href="#">SIGN IN |</a><a href="#">REGISTER</a></div>
 
   <div class="tab">
        <div id="car" class="cart">
@@ -52,9 +53,9 @@
         </div>
   <div class="bottom">
      <h5>CONTACT</h5>
-      <div class="text"><img src="phone.png"><h6>+91 9994835321</h6></div>
-      <div class="text"><img src="mail.png"><h6>lykewisedesigns@gmail.com</h6></div>
-      <div class="text"><img src="insta.png"><h6>lyke_wise</h6></div>
+      <div id= "phone"class="text"><img src="phone.png"><h6>+91 9994835321</h6></div>
+      <div id="mail" class="text"><img src="mail.png"><h6>lykewisedesigns@gmail.com</h6></div>
+      <div id="insta" class="text"><h6>lyke_wise</h6><img src="insta.png"></div>
   </div>
     
 </body>
