--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     
     <link rel="stylesheet" href="lywihm.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> -->
     <script src="app.js"></script>
 <header id="head">
     <!-- The overlay -->
