--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
 </header>
   <div id="solid" class="container">
-      <a href="#"><img src="assassin-creed-dp-9.jpg" alt=""></a><a href="#"><div class="centered"><img src="SOLID.png" alt=" "></div></a>
+      <a href="solid.html"><img src="assassin-creed-dp-9.jpg" alt=""></a><a href="solid.html"><div class="centered"><img src="SOLID.png" alt=" "></div></a>
 
   </div>
   <div id="graphic" class="container">
