--- a/solid.html
+++ b/solid.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>LykeWise Designs|HOME</title>
+    <title>LykeWise Designs|solid</title>
 </head>
 <body>
     
@@ -33,7 +33,7 @@
   
   <!-- Use any element to open/show the overlay navigation menu -->
   <span style="cursor:pointer" id="sidemenue" onclick="openNav()"class="sbutton"><img src="smenue.png"alt=""></span>
-  <div class="logo"><h1>LYKE WISE</h1></div>
+  <div class="logo"><h1><a href="logopage.html">LYKE WISE</a></h1></div>
   <div class="signin" style="font-size: 10px" ><a href="#">SIGN IN |</a><a href="#">REGISTER</a></div>
 
   <div class="tab">
