--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                                 
                                 <!-- Overlay content -->
-                                <div class="overlay-content">
+                                <div id="cont" class="overlay-content">
                                         <a href="#">BULK ORDERS</a>
                                         <a href="#">REQUEST FOR DESIGN</a>
                                         <a href="#">SUBMIT DESIGNS</a>
@@ -32,19 +32,19 @@
                         </div>
                         
                         <!-- Use any element to open/show the overlay navigation menu -->
-                        <span style="cursor:pointer" id="sidemenue" onclick="openNav()"class="sbutton">
+                        <span title="menue" style="cursor:pointer" id="sidemenue" onclick="openNav()"class="sbutton">
                                 <img src="smenue.png"alt="">
                         </span>
-                        <div class="logo"><h1>
+                        <div title="logo" class="logo"><h1>
                                 <a href="logopage.html">LYKE WISE</a></h1>
                         </div>
                         <div class="signin" style="font-size: 10px" >
-                                <a href="#">SIGN IN |</a><a href="#">REGISTER</a>
+                                <a title="click to sign-in" href="#">SIGN IN |</a><a title="click to register" href="#">REGISTER</a>
                         </div>
 
                         <div class="tab">
                                 <div id="car" class="cart">
-                                        <a href="#"><img src="cart.png" alt=""></a>
+                                        <a href="#"><img title="cart" src="cart.png" alt=""></a>
                                 </div>
                         </div>
                 </header>
@@ -54,10 +54,10 @@
 
                 </div>
                 <div id="graphic" class="container">
-                        <a href="#"><img src="back-back-view-dark-1311590.jpg" alt=""></a><a href="#"><div class="centered"><img src="graphic.png" alt=" "></div></a>
+                        <a href="graphic.html"><img src="back-back-view-dark-1311590.jpg" alt=""></a><a href="graphic.html"><div class="centered"><img src="graphic.png" alt=" "></div></a>
                 </div>
                 <div id="polos" class="container">
-                        <a href="#"><img src="polos-t-shirt-461211.jpg" alt=""></a><a href="#"><div class="centered"><img src="POLO’S.png" alt=" "></div></a>
+                        <a href="polos.html"><img src="polos-t-shirt-461211.jpg" alt=""></a><a href="polos.html"><div class="centered"><img src="POLO’S.png" alt=" "></div></a>
                 </div>
                 <div class="bottom">
                         <h5>CONTACT</h5>
