--- a/logopage.html
+++ b/logopage.html
@@ -50,15 +50,15 @@
                 </header>
                 
                 <div id="solid" class="container">
-                    <a href="solid.html"><img src="assassin-creed-dp-9.jpg" alt=""></a><a href="solid.html"><div class="centered"><img src="SOLID.png" alt=" "></div></a>
-
-                </div>
-                <div id="graphic" class="container">
-                        <a href="#"><img src="back-back-view-dark-1311590.jpg" alt=""></a><a href="#"><div class="centered"><img src="graphic.png" alt=" "></div></a>
-                </div>
-                <div id="polos" class="container">
-                        <a href="#"><img src="polos-t-shirt-461211.jpg" alt=""></a><a href="#"><div class="centered"><img src="POLO’S.png" alt=" "></div></a>
-                </div>
+                                <a href="solid.html"><img src="assassin-creed-dp-9.jpg" alt=""></a><a href="solid.html"><div class="centered"><img src="SOLID.png" alt=" "></div></a>
+            
+                            </div>
+                            <div id="graphic" class="container">
+                                    <a href="graphic.html"><img src="back-back-view-dark-1311590.jpg" alt=""></a><a href="graphic.html"><div class="centered"><img src="graphic.png" alt=" "></div></a>
+                            </div>
+                            <div id="polos" class="container">
+                                    <a href="polos.html"><img src="polos-t-shirt-461211.jpg" alt=""></a><a href="polos.html"><div class="centered"><img src="POLO’S.png" alt=" "></div></a>
+                            </div>
                 <div class="bottom">
                         <h5>CONTACT</h5>
                         <div id= "phone"class="text"><img src="phone.png"><h6>+91 9994835321</h6></div>
