--- a/solid.html
+++ b/solid.html
@@ -57,15 +57,18 @@
                 <button id="bt2" class="but" onclick="plusDivs(1)">&#10095;</button>
               </div>
               <div class="tabs">
-                  <button  class="category" onclick="openCity('all')">ALL</button>
-                  <button  class="category" onclick="openCity('hsleeve')">HALF-SLEEVE</button> 
-                  <button  class="category" onclick="openCity('fsleeve')">FULL-SLEEVE</button>
+                  <button  class="category" onclick="openCategory('all')">ALL</button>
+                  <button  class="category" onclick="openCategory('hsleeve')">HALF-SLEEVE</button> 
+                  <button  class="category" onclick="openCategory('fsleeve')">FULL-SLEEVE</button>
               </div> 
               
               <div id="all" class="solidt" >
                   <ul class="display">
                         <li>
-                                <a href="#"><img src="t-shirt display.jpg" ><img src="t-disp2.jpg" style="display: none"></a>
+                                <a href="#">
+                                        <img src="t-shirt display.jpg" >
+                                        <div class = "simg"></div>
+                                </a>
                                 <section >
                                         <a href="#">
                                                 <p >Half-Sleeve <strong>SOLID</strong></p>
