forms page added
Login
Create an account&
password pages were added and links were appended in other pages

--- a/logopage.html
+++ b/logopage.html
@@ -30,7 +30,7 @@
                                                 <a href="#">BULK ORDERS</a>
                                                 <a href="#">REQUEST FOR DESIGN</a>
                                                 <a href="#">SUBMIT DESIGNS</a>
-                                                <a href="#">LOGIN</a>
+                                                <a href="signin-form.html">LOGIN</a>
                                                 <a href="#">CONTACT US</a>
                                         </div>
                                 
@@ -42,7 +42,7 @@
                                 </span>
                                 
                                 <div class="signin" style="font-size: 10px" >
-                                        <a title="click to register" href="#">REGISTER</a><a title="click to sign-in" href="#">SIGN IN |</a>
+                                        <a title="click to register" href="register.html">REGISTER</a><a title="click to sign-in" href="signin-form.html">SIGN IN |</a>
                                 </div>
                         </div>
                                                 <div class="tab">
