--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
                         <h5>CONTACT</h5>
                         <div id= "phone"class="text"><img src="IMAGES/phone.png"><h6>+91 9994835321</h6></div>
                         <div id="mail" class="text"><img src="IMAGES/mail.png"><h6>lykewisedesigns@gmail.com</h6></div>
-                        <div id="insta" class="text"><h6>lyke_wise</h6><img src="IMAGES/insta.png"></div>
+                        <div id="insta" class="text"><a href="effect1/index.html"><h6>lyke_wise</h6></a><img src="IMAGES/insta.png"></div>
                 </div>
+                
                 <script src="plugins/aos.js"></script>
                 <script type="text/javascript">
                 AOS.init({
