--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <header id="head">
                         <!-- The overlay -->
                         <div title="logo" class="logo"><h1>
-                                <a href="logopage.html">LYKE WISE</a></h1>
+                                <a href="effect1/index.html">LYKE WISE</a></h1>
                         </div>
                         <div class="menuTab" style="height: 30px;float: left;width: 100%;">
                                 <div id="myNav" class="overlay">
@@ -67,9 +67,9 @@
                 </div>
                 <div class="bottom">
                         <h5>CONTACT</h5>
-                        <div id= "phone"class="text"><img src="IMAGES/phone.png"><h6>+91 9994835321</h6></div>
+                        <div id= "phone"class="text"><img src="IMAGES/phone.png"><h6>9994835321</h6></div>
                         <div id="mail" class="text"><img src="IMAGES/mail.png"><h6>lykewisedesigns@gmail.com</h6></div>
-                        <div id="insta" class="text"><a href="effect1/index.html"><h6>lyke_wise</h6></a><img src="IMAGES/insta.png"></div>
+                        <div id="insta" class="text"><h6>lyke_wise</h6><img src="IMAGES/insta.png"></div>
                 </div>
                 
                 <script src="plugins/aos.js"></script>
