--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <header id="head">
                         <!-- The overlay -->
                         <div title="logo" class="logo"><h1>
-                                <a href="effect1/index.html">LYKE WISE</a></h1>
+                                <a href="logopage.html">LYKE WISE</a></h1>
                         </div>
                         <div class="menuTab" style="height: 30px;float: left;width: 100%;">
                                 <div id="myNav" class="overlay">
